--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==1.1.1
 imutils==0.5.3
 Keras==2.12.0
-opencv-python==4.7.0
+opencv-python
 Pillow==8.0.1
 tensorflow==2.12.0
 scikit-image==0.23.2
