--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Flask==1.1.1
-imutils==0.5.3
-Keras
-opencv-python
+Flask
+imutils
+opencv-python==4.2.0.32
 Pillow
-tensorflow
 scikit-image
+gunicorn
